# multipaste

./: README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts  vite.config.ts.timestamp-1724410381601-7b4a90a041525.mjs
src/: App.vue  main.ts  router.ts  shortcut.ts  styles.css  typing.d.ts
src-tauri/: .env.example  .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-10-28-081921_create_clipboard_record/: down.sql  up.sql
src-tauri/src/: awake.rs  clipboard.rs  conf.rs  lib.rs  main.rs  ns.rs  schema.rs  setup.rs  shortcut.rs  store.rs  tray.rs  windows.rs
src/components/: AsyncImage.vue  RecordItem.vue
src/views/: index.vue  settings.vue
