[package]
name = "multipaste"
version = "0.0.1"
description = "A clipboard manager."
authors = ["Allen Tao"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "multipaste_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [ "protocol-asset", "macos-private-api", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.5.0"
rusqlite = "0.32.0"
chrono = "0.4.38"
lazy_static = "1.5.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
clippers = "0.1.2"
enigo = "0.2.1"
tauri-plugin-log = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-process = "2.0.0-rc.0"
cocoa = "0.25.0"
objc = "0.2.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-global-shortcut = "2.0.0-rc.0"
tauri-plugin-positioner = "2.0.0-rc"
