[package]
name = "multipaste"
version = "0.0.1"
description = "A clipboard manager."
authors = ["Allen Tao"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "multipaste_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [ "protocol-asset", "macos-private-api", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.5.0"
rusqlite = "0.32.0"
chrono = {version = "0.4.38", features = [ "serde" ] }
lazy_static = "1.5.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
enigo = "0.2.1"
tauri-plugin-log = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-process = "2.0.0-rc.0"
cocoa = "0.25.0"
objc = "0.2.7"
log = "0.4.22"
image = "0.25.2"
core-graphics = "0.22.3"
core-foundation = "0.9.4"
rust-crypto = "0.2.36"
tauri-plugin-notification = "2.0.0-rc.1"
glob = "0.3.1"
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
clipboard-rs = "0.1.11"
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "r2d2"] }
dotenvy = "0.15"
env_logger = "0.11.5"
diesel_migrations = "2.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-global-shortcut = "2.0.0-rc.0"
tauri-plugin-positioner = { version = "2.0.0-rc", features = ["tray-icon"] }
